[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rune-lang"
version = "0.2.0"
description = "A handcrafted interpreted programming language built from scratch in Python."
readme = "Readme.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["language", "interpreter", "educational", "programming-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
rune = "rune.cli.main:main"

[project.urls]
Homepage = "https://github.com/kjxcodez/rune-lang"
Repository = "https://github.com/kjxcodez/rune-lang"
"Bug Tracker" = "https://github.com/kjxcodez/rune-lang/issues"
Changelog = "https://github.com/kjxcodez/rune-lang/blob/main/docs/changelog.md"

[tool.setuptools.packages.find]
where = [".."]
include = ["rune*"]
exclude = ["rune.tests*", "rune.old_str*"]

[tool.setuptools.package-dir]
"" = ".."
